--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "tailwindcss": "^3.4.10"
   },
   "dependencies": {
-    "angular-auth-oidc-client": "^18.0.1"
+    "angular-auth-oidc-client": "^18.0.1",
+    "openapi-merge-cli": "^1.3.2"
   }
 }
